--- a/install/beta/kickstart/Centos_6_5_en/ks.cfg
+++ b/install/beta/kickstart/Centos_6_5_en/ks.cfg
@@ -11,7 +11,7 @@ firewall --disable
 reboot
 authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone --utc Europe/Paris
+timezone --utc Europe/London
 bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
 # The following is the partition information you requested
 # Note that any partitions you deleted are not expressed
