--- a/install/beta/kickstart/Centos_6_5_en/ks.cfg
+++ b/install/beta/kickstart/Centos_6_5_en/ks.cfg
@@ -3,6 +3,8 @@
 #version=DEVEL
 install
 url --url=http://mirror.centos.org/centos/6.5/os/i386
+# for rapid install use text mode
+text
 lang en_EN.UTF-8
 keyboard en-latin9
 network --onboot yes --device eth0 --bootproto dhcp --ipv6 auto
