--- a/install/beta/kickstart/Centos_6_5_fr/ks.cfg
+++ b/install/beta/kickstart/Centos_6_5_fr/ks.cfg
@@ -3,6 +3,8 @@
 #version=DEVEL
 install
 url --url=http://mirror.centos.org/centos/6.5/os/i386
+#pour une installation plus rapide utilisez le mode texte
+text
 lang fr_FR.UTF-8
 keyboard fr-latin9
 network --onboot yes --device eth0 --bootproto dhcp --ipv6 auto
