--- a/install/CentOS-6_4/compile/git/Makefile
+++ b/install/CentOS-6_4/compile/git/Makefile
@@ -1,17 +1,17 @@
 # git version 1.9-rc0
 install:
-	mkdir /etc/zpanel/bin/git/
-	cp -R ./* /etc/zpanel/bin/git/
-	rm -f /etc/zpanel/bin/git/Makefile
-	ln -s /etc/zpanel/bin/git/bin/git /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/git-cvsserver /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/gitk /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/git-receive-pack /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/git-shell /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/git-upload-archive /usr/bin
-	ln -s /etc/zpanel/bin/git/bin/git-upload-pack /usr/bin
+	mkdir /opt/git/
+	cp -R ./* /opt/git/
+	rm -f /opt/git/Makefile
+	ln -s /opt/git/bin/git /usr/bin
+	ln -s /opt/git/bin/git-cvsserver /usr/bin
+	ln -s /opt/git/bin/gitk /usr/bin
+	ln -s /opt/git/bin/git-receive-pack /usr/bin
+	ln -s /opt/git/bin/git-shell /usr/bin
+	ln -s /opt/git/bin/git-upload-archive /usr/bin
+	ln -s /opt/git/bin/git-upload-pack /usr/bin
 uninstall:
-	rm -rf /etc/zpanel/bin/git/
+	rm -rf /opt/git/
 	rm -f /usr/bin/git
 	rm -f /usr/bin/git-cvsserver
 	rm -f /usr/bin/gitk
