--- a/install/CentOS-6_4/compile/httpd/Makefile
+++ b/install/CentOS-6_4/compile/httpd/Makefile
@@ -1,11 +1,6 @@
 # zphttpd (httpd apache) version 2.4.7 include apr 1.5.0 apr-util 1.5.3
 install:
-	mkdir -p /etc/zpanel/bin/apr
-	mkdir -p /etc/zpanel/bin/apr-util
-	mkdir -p /etc/zpanel/bin/httpd
-	cp -R ./apr/* /etc/zpanel/bin/apr
-	cp -R ./apr-util/* /etc/zpanel/bin/apr-util
-	cp -R ./httpd/* /etc/zpanel/bin/httpd
+	cp -R ./* /etc/zpanel/bin/
 	sed -i 's/#LoadModule/LoadModule/g' /etc/zpanel/bin/httpd/conf/httpd.conf
 	sed -i 's/ServerAdmin you@example.com/ServerAdmin postmaster@$(hostname)/g' /etc/zpanel/bin/httpd/conf/httpd.conf
 	sed -i 's/#ServerName www.example.com/ServerName $(hostname)/g' /etc/zpanel/bin/httpd/conf/httpd.conf
