2 small errors in sed. Corr. Apache2.2 / 2.4

--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -22,10 +22,12 @@ ServerName localhost
 
 # Disallow web access to directories that don't need it/that we don't want people looking in!
 <Directory /etc/zpanel/panel/cnf/>
-    Require all denied
+    Order deny,allow 
+    Deny from all
 </Directory>
 <Directory /etc/zpanel/panel/modules/*/hooks>
-    Require all denied
+    Order deny,allow 
+    Deny from all
 </Directory>
 
 # Set server tokens
