--- a/preconf/apache/httpd-vhosts.conf
+++ b/preconf/apache/httpd-vhosts.conf
@@ -11,13 +11,14 @@
     ServerAlias *.ZPANEL.YOURDOMAIN.COM
     <Location /server-status>
         SetHandler server-status
-        Require all granted
+        Order allow,deny
+        Allow from all
     </Location>
     AddType application/x-httpd-php .php
     <Directory "/etc/zpanel/panel/">
         Options +FollowSymLinks
-        Require all granted
+        Order allow,deny
+        Allow from all
     </Directory>
-
     # Custom settings are loaded below this line (if any exist)
 </VirtualHost>
