rework of proftpd config

--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -12,8 +12,8 @@ TimeoutLogin         	120
 TimeoutIdle          	600
 TimeoutNoTransfer    	900
 TimeoutStalled      	3600
-User			root
-Group			root
+User			nobody
+Group			nobody
 DefaultRoot		~
 MaxLoginAttempts	3
 RequireValidShell	no
