--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -13,7 +13,7 @@ TimeoutIdle          	600
 TimeoutNoTransfer    	900
 TimeoutStalled      	3600
 User			nobody
-Group			nobody
+Group			nogroup
 DefaultRoot		~
 MaxLoginAttempts	3
 RequireValidShell	no
