Fixed NameVirtualHost hiccup
+ extra notice for postfix

--- a/preconf/apache/httpd-vhosts.conf
+++ b/preconf/apache/httpd-vhosts.conf
@@ -3,6 +3,8 @@
 # Default file for install, it will be overwritten at end of install
 ################################################################
 
+NameVirtualHost *:80
+
 # Configuration for ZPanel control panel.
 <VirtualHost *:80>
     ServerAdmin YOUREMAIL@YOUDOMAIN.COM
