zpanel to Sentora moving.
MUST be used with master branch until it is tagged with new tag

--- a/preconf/apache/httpd-vhosts.conf
+++ b/preconf/apache/httpd-vhosts.conf
@@ -5,19 +5,19 @@
 
 NameVirtualHost *:80
 
-# Configuration for ZPanel control panel.
+# Configuration for Sentora control panel.
 <VirtualHost *:80>
     ServerAdmin YOUREMAIL@YOUDOMAIN.COM
-    DocumentRoot "/etc/zpanel/panel/"
-    ServerName ZPANEL.YOURDOMAIN.COM
-    ServerAlias *.ZPANEL.YOURDOMAIN.COM
+    DocumentRoot "/etc/sentora/panel/"
+    ServerName panel.YOURDOMAIN.COM
+    ServerAlias *.panel.YOURDOMAIN.COM
     <Location /server-status>
         SetHandler server-status
         Order allow,deny
         Allow from all
     </Location>
     AddType application/x-httpd-php .php
-    <Directory "/etc/zpanel/panel/">
+    <Directory "/etc/sentora/panel/">
         Options +FollowSymLinks
         Order allow,deny
         Allow from all
