--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -1,14 +1,14 @@
-# ZPanel Apache Include file
+# Sentora Apache Include file
 # Written by Bobby Allen, 15/05/2011
 
-# Set the Zpanel Alias (used for development, sable will eventually use a VHOST)
-#Alias /zpanel /etc/zpanel/panel
+# Set the Sentora Alias (used for development, sable will eventually use a VHOST)
+#Alias /Sentora /etc/sentora/panel
 
 # Set a default server name for the master configuration to supress Apache daemon warnings
 ServerName localhost
 
-# Setup the directory settings and PHP security flags for the Zpanel application directory.
-<Directory /etc/zpanel/panel>
+# Setup the directory settings and PHP security flags for the Sentora application directory.
+<Directory /etc/sentora/panel>
     Options +FollowSymLinks
     DirectoryIndex index.php
     <IfModule mod_php5.c>
@@ -16,16 +16,16 @@ ServerName localhost
         php_flag magic_quotes_gpc Off
         php_flag track_vars On
         php_flag register_globals Off
-        php_admin_value upload_tmp_dir /var/zpanel/temp
+        php_admin_value upload_tmp_dir /var/sentora/temp
     </IfModule>
 </Directory>
 
 # Disallow web access to directories that don't need it/that we don't want people looking in!
-<Directory /etc/zpanel/panel/cnf/>
+<Directory /etc/sentora/panel/cnf/>
     Order deny,allow 
     Deny from all
 </Directory>
-<Directory /etc/zpanel/panel/modules/*/hooks>
+<Directory /etc/sentora/panel/modules/*/hooks>
     Order deny,allow 
     Deny from all
 </Directory>
@@ -33,5 +33,5 @@ ServerName localhost
 # Set server tokens
 ServerTokens Prod
 
-# Now we include the generic VHOST configuration file that holds all the ZPanel user hosted vhost data
-Include /etc/zpanel/configs/apache/httpd-vhosts.conf
+# Now we include the generic VHOST configuration file that holds all Sentora user hosted vhost data
+Include /etc/sentora/configs/apache/httpd-vhosts.conf
