--- a/preconf/bind/named.conf
+++ b/preconf/bind/named.conf
@@ -1,43 +1,44 @@
 # This control was present in Ubuntu and absent in CentOs.
 controls {
-        inet 127.0.0.1 port 953
-        allow { 127.0.0.1; } keys { "rndc-key"; };
+    inet 127.0.0.1 port 953
+    allow { 127.0.0.1; } keys { "rndc-key"; };
 };
 
 options {
-        listen-on port 53 { any; };
-	allow-query	{ any; };
-	directory	"/var/named";
-	dump-file	"/var/named/data/cache_dump.db";
-	statistics-file	"/var/named/data/named_stats.txt";
-	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	recursion no;
+    listen-on port 53 { any; };
+    listen-on-v6 port 53 { any; };
+	  allow-query { any; };
+	  directory "/var/named";
+	  dump-file "/var/named/data/cache_dump.db";
+	  statistics-file "/var/named/data/named_stats.txt";
+	  memstatistics-file "/var/named/data/named_mem_stats.txt";
+	  recursion no;
 
-        dnssec-enable yes;
-        dnssec-validation yes;
-        dnssec-lookaside auto;
+    dnssec-enable yes;
+    dnssec-validation yes;
+    dnssec-lookaside auto;
 
-        /* Path to ISC DLV key */
-        bindkeys-file "/etc/named.iscdlv.key";
+    /* Path to ISC DLV key */
+    bindkeys-file "/etc/named.iscdlv.key";
 };
 
 logging {
-	channel bind_log {
-		file "/var/zpanel/logs/bind/bind.log" versions 3 size 2m;
-		severity info;
-		print-severity yes;
-		print-time yes;
-		print-category yes;
-	};
+	  channel bind_log {
+		    file "/var/sentora/logs/bind/bind.log" versions 3 size 2m;
+		    severity info;
+		    print-severity yes;
+		    print-time yes;
+		    print-category yes;
+	  };
 
-        channel default_debug {
-                file "/var/zpanel/logs/bind/debug.log";
-                severity dynamic;
-        };
+    channel default_debug {
+        file "/var/sentora/logs/bind/debug.log";
+        severity dynamic;
+    };
   
-	category default {
-		bind_log;
-	};
+	  category default {
+		    bind_log;
+	  };
 };
 include "/etc/bind/zones.rfc1918";
-include "/etc/zpanel/configs/bind/etc/named.conf";
+include "/etc/sentora/configs/bind/etc/named.conf";
