--- a/preconf/dovecot2/dovecot.conf
+++ b/preconf/dovecot2/dovecot.conf
@@ -10,16 +10,16 @@ protocols = imap pop3 lmtp sieve
 auth_mechanisms = plain login
 passdb {
   driver = sql
-  args = /etc/zpanel/configs/dovecot2/dovecot-mysql.conf
+  args = /etc/sentora/configs/dovecot2/dovecot-mysql.conf
 }
 userdb {
   driver = prefetch
 }
 userdb {
   driver = sql
-  args = /etc/zpanel/configs/dovecot2/dovecot-mysql.conf
+  args = /etc/sentora/configs/dovecot2/dovecot-mysql.conf
 }
-mail_location = maildir:/var/zpanel/vmail/%d/%n
+mail_location = maildir:/var/sentora/vmail/%d/%n
 #first_valid_uid = ?
 #mail_plugins =
 mailbox_idle_check_interval = 30 secs
@@ -105,17 +105,17 @@ protocol sieve {
   managesieve_max_compile_errors = 5
 }
 dict {
-  quotadict = mysql:/etc/zpanel/configs/dovecot2/dovecot-dict-quota.conf
+  quotadict = mysql:/etc/sentora/configs/dovecot2/dovecot-dict-quota.conf
 }
 plugin {
 # quota = dict:User quota::proxy::quotadict
   quota = maildir:User quota
   acl = vfile:/etc/dovecot/acls
-  trash = /etc/zpanel/configs/dovecot2/dovecot-trash.conf
-  sieve_global_path = /var/zpanel/sieve/globalfilter.sieve
+  trash = /etc/sentora/configs/dovecot2/dovecot-trash.conf
+  sieve_global_path = /var/sentora/sieve/globalfilter.sieve
   sieve = ~/dovecot.sieve
   sieve_dir = ~/sieve
-  sieve_global_dir = /var/zpanel/sieve/
+  sieve_global_dir = /var/sentora/sieve/
   #sieve_extensions = +notify +imapflags
   sieve_max_script_size = 1M
   #sieve_max_actions = 32
