--- a/preconf/postfix/vacation.conf
+++ b/preconf/postfix/vacation.conf
@@ -1,5 +1,5 @@
 $db_type = 'mysql';
 $db_username = 'postfix';
 $db_password = '!POSTFIX_PASSWORD!';
-$db_name     = 'zpanel_postfix';
+$db_name     = 'sentora_postfix';
 $vacation_domain = 'autoreply.test.nforced.co.uk';
