--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -22,11 +22,11 @@ UseReverseDNS        	off
 MaxInstances		30
 AllowOverwrite		yes
 IdentLookups         	off
-TransferLog		/var/zpanel/logs/proftpd/xferlog.www
-ExtendedLog		/var/zpanel/logs/proftpd/access.log WRITE,READ write
-ExtendedLog		/var/zpanel/logs/proftpd/auth.log AUTH auth
-#ExtendedLog   		/var/zpanel/logs/proftpd/paranoid.log ALL default
-TransferLog		/var/zpanel/logs/proftpd/xferlog.legacy
+TransferLog		/var/sentora/logs/proftpd/xferlog.www
+ExtendedLog		/var/sentora/logs/proftpd/access.log WRITE,READ write
+ExtendedLog		/var/sentora/logs/proftpd/auth.log AUTH auth
+#ExtendedLog   		/var/sentora/logs/proftpd/paranoid.log ALL default
+TransferLog		/var/sentora/logs/proftpd/xferlog.legacy
 LogFormat         	default "%h %l %u %t \"%r\" %s %b"
 LogFormat		auth    "%v [%P] %h %t \"%r\" %s"
 LogFormat		write   "%h %l %u %t \"%r\" %s %b"
@@ -44,7 +44,7 @@ SQLAuthenticate         users groups
 
 # used to connect to the database
 # databasename@host database_user user_password
-SQLConnectInfo  zpanel_proftpd@localhost proftpd !SQL_PASSWORD!
+SQLConnectInfo  sentora_proftpd@localhost proftpd !SQL_PASSWORD!
 
 # Here we tell ProFTPd the names of the database columns in the "usertable"
 # we want it to interact with. Match the names with those in the db
