--- a/preconf/dovecot2/dovecot-dict-quota.conf
+++ b/preconf/dovecot2/dovecot-dict-quota.conf
@@ -1,4 +1,4 @@
-connect = host=localhost dbname=zpanel_postfix user=postfix password=!POSTFIX_PASSWORD!
+connect = host=localhost dbname=sentora_postfix user=postfix password=!POSTFIX_PASSWORD!
 map {
   pattern = priv/quota/storage
   table = quota2
