DNS : forbid zone tranfert

--- a/preconf/bind/named.conf
+++ b/preconf/bind/named.conf
@@ -4,6 +4,10 @@ controls {
     allow { 127.0.0.1; } keys { "rndc-key"; };
 };
 
+acl trusted-servers {
+    !SERVER_IP!;
+};
+
 options {
     listen-on port 53 { any; };
     listen-on-v6 port 53 { any; };
