Remove Listen from main apache config...
... to enable sentora to handle it correctly
+ a few aesthetic changes from pull request #13
Must be used with Upadte of core to handle ports correctely

--- a/preconf/apache/httpd-vhosts.conf
+++ b/preconf/apache/httpd-vhosts.conf
@@ -4,6 +4,7 @@
 ################################################################
 
 NameVirtualHost *:80
+Listen 80
 
 # Configuration for Sentora control panel.
 <VirtualHost *:80>
