reduce amount of bind logs
Setting was logging level "Info" that produce excessive amout of data
into /var/sentora/logs/bind/bind.log

--- a/preconf/bind/named.conf
+++ b/preconf/bind/named.conf
@@ -29,7 +29,7 @@ options {
 logging {
 	  channel bind_log {
 		    file "/var/sentora/logs/bind/bind.log" versions 3 size 2m;
-		    severity info;
+		    severity notice;
 		    print-severity yes;
 		    print-time yes;
 		    print-category yes;
