--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -38,9 +38,12 @@ LoadModule mod_sql.c
 LoadModule mod_sql_mysql.c
 LoadModule mod_quotatab.c
 LoadModule mod_quotatab_sql.c
+LoadModule mod_sql_passwd.c
 # The passwords in MySQL are encrypted using CRYPT
-SQLAuthTypes            Plaintext Crypt
+SQLAuthTypes            SHA512 Openssl Plaintext
 SQLAuthenticate         users groups
+SQLPasswordEngine on
+SQLPasswordEncoding hex
 
 # used to connect to the database
 # databasename@host database_user user_password
