--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -7,6 +7,14 @@
 # Set a default server name for the master configuration to supress Apache daemon warnings
 ServerName localhost
 
+# Add default entry for security
+<VirtualHost *:80>
+    DocumentRoot /var/sentora/www-default
+    <Directory /var/sentora/www-default
+        Require all granted
+    </Directory>
+</VirtualHost>
+
 # Setup the directory settings and PHP security flags for the Sentora application directory.
 <Directory /etc/sentora/panel>
     Options +FollowSymLinks
