--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -10,7 +10,7 @@ ServerName localhost
 # Add default entry for security
 <VirtualHost *:80>
     DocumentRoot /var/sentora/www-default
-    <Directory /var/sentora/www-default
+    <Directory /var/sentora/www-default>
         Require all granted
     </Directory>
 </VirtualHost>
