--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -33,5 +33,14 @@ ServerName localhost
 # Set server tokens
 ServerTokens Prod
 
-# Now we include the generic VHOST configuration file that holds all Sentora user hosted vhost data
+# Default apache vhost to disable direct IP access to panel
+<VirtualHost *:80>
+  ServerName default
+  DocumentRoot /var/sentora/hostdata/zadmin/public_html
+    <Location />
+        Require all denied
+    </Location>
+</VirtualHost>
+
+# Include the full VHOST configuration file that holds all Sentora hosted vhosts
 Include /etc/sentora/configs/apache/httpd-vhosts.conf
