Fixed vacation email from domain

--- a/preconf/postfix/vacation.conf
+++ b/preconf/postfix/vacation.conf
@@ -2,4 +2,4 @@ $db_type = 'mysql';
 $db_username = 'postfix';
 $db_password = '!POSTFIX_PASSWORD!';
 $db_name     = 'sentora_postfix';
-$vacation_domain = 'autoreply.test.nforced.co.uk';
+$vacation_domain = 'autoreply.!POSTFIX_VACATION!';
