--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -21,7 +21,7 @@ MaxClients		50
 UseReverseDNS        	off
 MaxInstances		30
 AllowOverwrite		yes
-IdentLookups         	off
+#IdentLookups         	off
 TransferLog		/var/sentora/logs/proftpd/xferlog.www
 ExtendedLog		/var/sentora/logs/proftpd/access.log WRITE,READ write
 ExtendedLog		/var/sentora/logs/proftpd/auth.log AUTH auth
