Added Passive ports to Proftpd
Added Passive ports to Proftpd

--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -32,6 +32,14 @@ LogFormat		auth    "%v [%P] %h %t \"%r\" %s"
 LogFormat		write   "%h %l %u %t \"%r\" %s %b"
 
 ######################################################
+# Passive ports enable
+######################################################
+PassivePorts			60000 65535
+AllowStoreRestart		on
+AllowRetrieveRestart	on
+ListOptions				"-la"
+
+######################################################
 # SQL INFORMATION
 ######################################################
 LoadModule mod_sql.c
