Configured Passive Transfer Mode

--- a/preconf/proftpd/proftpd-mysql.conf
+++ b/preconf/proftpd/proftpd-mysql.conf
@@ -32,7 +32,7 @@ LogFormat		auth    "%v [%P] %h %t \"%r\" %s"
 LogFormat		write   "%h %l %u %t \"%r\" %s %b"
 
 ######################################################
-# Passive ports enable
+# ENABLE PASSIVE TRANSFER MODE
 ######################################################
 PassivePorts			60000 65535
 AllowStoreRestart		on
